--- a/src/app/pages/home/component/product-header/product-header.component.html
+++ b/src/app/pages/home/component/product-header/product-header.component.html
@@ -26,13 +26,16 @@
 </mat-menu>
     </div>
     <button>
-        <mat-icon (click)="onColumnsUpdated(1)">view_list</mat-icon>
+        <mat-icon (click)="onColumnsUpdated(1)"
+          >view_list</mat-icon>
     </button>
     <button>
-        <mat-icon (click)="onColumnsUpdated(3)">view_module</mat-icon>
+        <mat-icon (click)="onColumnsUpdated(3)
+        ">view_module</mat-icon>
     </button>
     <button>
-        <mat-icon (click)="onColumnsUpdated(4)">view_comfy</mat-icon>
+        <mat-icon (click)="onColumnsUpdated(4)
+        ">view_comfy</mat-icon>
     </button>
 </div>
 </div>
